[metadata]
name = indico-get-events-by-email
version = 0.1
description = A plugin to export events ids managed/linked by/to email address .
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url =
license = MIT
author = Mohammed H
author_email = me@mohammedh.io
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.1

[options.entry_points]
indico.plugins =
    indico_get_events_by_email = indico_get_events_by_email.plugin:GetEventsByEmailPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
